[package]
name = "TestArrayFire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8.0"
rand = "0.9.0-alpha.2"
typed-arena = "2.0.2"
indexmap = "2.5.0"
sendable = { git = "https://github.com/gbemiga-viewserver/sendable", branch = "master" , features = ["deepsize","disable_safety_checks"]}
log = "0.4.22"
